--- a/styles/base.css
+++ b/styles/base.css
@@ -1,17 +1,20 @@
 :root {
-    --primary-color: black;
-    --secondary-color: silver;
-    --accent1-color: red;
+    --primary-color: #91C499;
+    --secondary-color: #b4c7ba;
+    --accent1-color: white;
     --accent2-color: green;
-    --accent3-color: blue;
+    --accent3-color: #CFD11A;
+
 }
 
 body {
     font-family: "Open Sans", sans-serif;
     font-weight: 300;
     /* font-size: 1.5rem */
-    /* max-width: 960px; */
+    max-width: 960px;
+    background-color: var(--accent1-color);
     
+
 }
 
 h1 {
@@ -22,21 +25,29 @@ h1 {
 nav {
     display: flex;
     background-color: var(--secondary-color);
+    /* border-radius: 20px; */
     margin: 0 auto;
 }
 
 nav ul {
     list-style-type: none; /* removes bullet points */
+    flex: 1 1 auto;
 }
 
 nav a {
     display: block; /* note 1 */
     text-align: center;
     padding: 1rem;
+    color: black;
 }
 
 nav a:hover {
     border: 1px solid var(--accent1-color);
+    border-radius: 20px;
+}
+
+nav a:link {
+    color: black;
 }
 
 main {
@@ -54,7 +65,7 @@ main {
 }
 
 
-/* this is my experiment feature */
+/* this is past experiment feature */
 /* .card-container {
     display: flex;
 }
@@ -74,41 +85,61 @@ main {
 } */
 /* this is my experiment feature */
 
+
+
 .card {
     display: grid;
     grid-template: auto auto auto/auto auto;
+
+    padding: 2rem;
+    border: 1px solid black;
+    border-radius: 20px;
+    margin: 1rem 0;
+
+    background-color: var(--accent3-color);
 
 }
 
 .card h2 {
     grid-column: 1/3;
+    grid-row: 1/2;
     text-align: center;
-    padding: 0px;
+    padding-bottom: 2rem;
 }
 
 .card img {
-    grid-column: 1/3;
+    grid-column: 1/2;
+    grid-row: 1/4;
+    width: 100%;
+}
+
+#card-img2 {
+    grid-column: 1/2;
+    grid-row: 2/4;
     width: 100%;
 }
 
 .card p {
-    grid-column: 1/2;
-    grid-row: 3/4;
+    grid-column: 2/3;
+    grid-row: 2/3;
+    padding: 0 2rem;
 }
 
 .card ul {
     grid-column: 2/3;
     grid-row: 3/4;
-    padding-right: 10%;
+    /* padding-right: 10%; */
+    padding: 0 3rem;
 }
 
 .invisible {
     font-size: 0;
 }
 
-/* footer {
+footer {
     text-align: center;
-} */
+    /* background-color: #808F85; */
+}
 
 /* 
 note 1
