--- a/styles/base.css
+++ b/styles/base.css
@@ -85,13 +85,17 @@ main {
 } */
 /* this is my experiment feature */
 
+@media (min-width: 720px){
+    main {
+        display: flex;
+        
+    }
+}
+
 
 
 .card {
-    display: grid;
-    grid-template: auto auto auto/auto auto;
-
-    padding: 2rem;
+    /* padding: 2rem; */
     border: 1px solid black;
     border-radius: 20px;
     margin: 1rem 0;
@@ -99,18 +103,36 @@ main {
     background-color: var(--accent3-color);
 
 }
+article {
+    display: grid;
+    grid-template: auto auto auto/auto auto;
+    
+}
 
-.card h2 {
+article h2 {
+    padding: 2rem;
+    background-color: var(--primary-color);
+    border-radius: 20px 20px 0 0;
+    margin: auto 0;
+}
+
+article h2, h3 {
     grid-column: 1/3;
     grid-row: 1/2;
     text-align: center;
-    padding-bottom: 2rem;
 }
 
-.card img {
+article h3 {
+    border-bottom: 1px solid black;
+
+}
+
+article img {
     grid-column: 1/2;
-    grid-row: 1/4;
+    grid-row: 2/4;
     width: 100%;
+    padding: 1rem 0 0 1rem;
+    min-width: 50%;
 }
 
 #card-img2 {
@@ -119,16 +141,15 @@ main {
     width: 100%;
 }
 
-.card p {
+article p {
     grid-column: 2/3;
     grid-row: 2/3;
     padding: 0 2rem;
+    min-width: 50%;
 }
 
-.card ul {
-    grid-column: 2/3;
-    grid-row: 3/4;
-    /* padding-right: 10%; */
+article ul {
+    grid-column: 1/3;
     padding: 0 3rem;
 }
 
