--- a/styles/base.css
+++ b/styles/base.css
@@ -116,7 +116,7 @@ article h2 {
     margin: auto 0;
 }
 
-article h2, h3 {
+article h2 {
     grid-column: 1/3;
     grid-row: 1/2;
     text-align: center;
@@ -124,6 +124,9 @@ article h2, h3 {
 
 article h3 {
     border-bottom: 1px solid black;
+    grid-column: 1/3;
+    /* grid-row: 1/2; */
+    text-align: center;
 
 }
 
